# VariableExplorerFlint

./: .gitignore  Dockerfile  README.md  RedisTestThing.ipynb  Thing.ipynb  Untitled.ipynb  Untitled1.ipynb  pyproject.toml
.ipynb_checkpoints/: RedisTestThing-checkpoint.ipynb  Thing-checkpoint.ipynb  Untitled-checkpoint.ipynb
myextension/: .gitignore  package.json  tsconfig.json
myextension/src/: index.ts
redis_server/: package-lock.json  package.json  server.js
redis_state/: RedisProxy.py  RedisState.py  __init__.py  state.py
