[tool.poetry]
name = "variableexplorerflint"
version = "0.1.0"
description = ""
authors = ["Mackaber <x@mackaber.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
redis = "^5.2.1"
wrapt = "^1.17.2"
codeium-jupyter = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
